--- a/config.ini
+++ b/config.ini
@@ -9,3 +9,10 @@ spark.sql.execution.arrow.pyspark.enabled=true
 spark.driver.maxResultSize=2g
 spark.ui.port=4040
 spark.driver.bindAddress=0.0.0.0
+
+[DATABASE]
+host = mongodb 
+port = 27017
+user = dolmachi
+password = 12345
+name = car_price_database
