--- a/config.ini
+++ b/config.ini
@@ -10,8 +10,8 @@ spark.driver.maxResultSize=2g
 spark.ui.port=4040
 spark.driver.bindAddress=0.0.0.0
 spark.jars.packages = org.mongodb.spark:mongo-spark-connector_2.12:10.2.0
-spark.mongodb.read.connection.uri  = mongodb://dolmachi:12345@mongodb:27017/products_database
-spark.mongodb.write.connection.uri = mongodb://dolmachi:12345@mongodb:27017/products_database
+spark.mongodb.read.connection.uri  = mongodb://dolmachi:12345@mongodb:27017/products_database?authSource=admin
+spark.mongodb.write.connection.uri = mongodb://dolmachi:12345@mongodb:27017/products_database?authSource=admin
 
 [DATABASE]
 host = mongodb 
