--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,13 @@ services:
   mongodb:
     image: mongo
     container_name: mongodb-container
+    restart: unless-stopped
     environment:
       - MONGO_INITDB_ROOT_USERNAME=dolmachi
       - MONGO_INITDB_ROOT_PASSWORD=12345
+    volumes:
+      - ./data/mongo-dump:/dump:ro
+      - ./scripts/restore.sh:/docker-entrypoint-initdb.d/restore.sh:ro
     networks:
       - app-network
   
